# cadence

./: .gitignore  .travis.yml  CHANGES.md  Cargo.toml  LICENSE-MIT  MIGRATION.md  README.md  build-docs.sh  release.txt
.circleci/: config.yml
benches/: lib.rs
cadence/: Cargo.toml  README.md
cadence-macros/: Cargo.toml  README.md
cadence-macros/benches/: lib.rs
cadence-macros/examples/: production-setup.rs  simple-setup.rs
cadence-macros/src/: lib.rs  macros.rs  state.rs
cadence-macros/tests/: lib.rs
cadence/benches/: lib.rs
cadence/examples/: arc-wrapped-client.rs  custom-value-type.rs  datadog-extensions.rs  nop-sink.rs  production-sink.rs  sending-tags.rs  simple-sink.rs  spy-sink.rs  tag-view.rs  unix-socket.rs  unwrapped-client.rs  value-packing.rs  wrapped.rs
cadence/src/: builder.rs  client.rs  compat.rs  ext.rs  io.rs  lib.rs  prelude.rs  sync.rs  test.rs  types.rs
cadence/src/builder/: byte_str.rs  sample_rate.rs  sampler.rs
cadence/src/sinks/: core.rs  mod.rs  queuing.rs  spy.rs  udp.rs  unix.rs
cadence/tests/: alloc-no-tags.rs  alloc-with-tags.rs  compat.rs  core.rs  spy.rs  udp.rs  unix.rs  utils.rs
examples/: arc-wrapped-client.rs  nop-sink.rs  production-sink.rs  sending-tags.rs  simple-sink.rs  spy-sink.rs  tag-view.rs  unix-socket.rs  unwrapped-client.rs
src/: bin.rs  builder.rs  client.rs  ext.rs  io.rs  lib.rs  metrics.rs  prelude.rs  server.rs  sinks.rs  test.rs  types.rs
src/client/: metrics.rs  mod.rs  net.rs  sinks.rs  types.rs
src/datadog/: builder.rs  client.rs  mod.rs  types.rs
src/server/: mod.rs
src/sinks/: async.rs  core.rs  crossbeam.rs  mod.rs  queuing.rs  spy.rs  threading.rs  threadpool.rs  udp.rs  uds.rs  unix.rs
tests/: core.rs  lib.rs  spy.rs  udp.rs  unix.rs  utils.rs
