[package]
name = "cadence"
version = "0.22.0"
authors = ["Nick Pillitteri"]
description = "An extensible Statsd client for Rust"
homepage = "https://github.com/56quarters/cadence"
documentation = "https://docs.rs/cadence/"
repository = "https://github.com/56quarters/cadence.git"
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["statsd", "metrics"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.4.0"

[lib]
name = "cadence"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "56quarters/cadence" }
