[package]
name = "cadence-macros"
version = "0.25.0"
authors = ["Nick Pillitteri"]
description = "An extensible Statsd client for Rust"
homepage = "https://github.com/56quarters/cadence"
documentation = "https://docs.rs/cadence-macros/"
repository = "https://github.com/56quarters/cadence"
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["statsd", "metrics"]
edition = "2018"
autobenches = false

[dependencies]
cadence = { path = "../cadence", version = "0.25" }

[dev-dependencies]
criterion = "0.3.1"
crossbeam-channel = "0.5.0"

[[bench]]
name = "lib"
harness = false
