[package]
name = "cadence-macros"
version = "1.4.0"
authors = ["Nick Pillitteri"]
description = "Macros for Cadence, an extensible Statsd client for Rust"
homepage = "https://github.com/56quarters/cadence"
documentation = "https://docs.rs/cadence-macros/"
repository = "https://github.com/56quarters/cadence"
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["statsd", "metrics"]
edition = "2021"
autobenches = false

[dependencies]
cadence = { path = "../cadence", version = "1.4" }

[dev-dependencies]
crossbeam-channel = "0.5.1"
