[package]
name = "cadence"
version = "1.7.0"
authors = ["Nick Pillitteri"]
description = "An extensible Statsd client for Rust"
homepage = "https://github.com/56quarters/cadence"
documentation = "https://docs.rs/cadence/"
repository = "https://github.com/56quarters/cadence"
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["statsd", "metrics"]
edition = "2021"
autobenches = false

[dependencies]
crossbeam-channel = "0.5.11"


